[gd_scene load_steps=19 format=2]

[ext_resource path="res://resources/font/button.tres" type="DynamicFont" id=1]
[ext_resource path="res://resources/font/Arcadepix Plus.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/main_screen/direct.gd" type="Script" id=3]
[ext_resource path="res://scenes/user_profile/buttons and panels/button1..png" type="Texture" id=4]
[ext_resource path="res://resources/soundtrack/AudioLoopPlayer.tscn" type="PackedScene" id=5]
[ext_resource path="res://resources/soundtrack/menu/title/loop.wav" type="AudioStream" id=6]
[ext_resource path="res://scenes/user_profile/mascot/mascot-sheet.png" type="Texture" id=7]
[ext_resource path="res://resources/Sprites/welcome_screen.png" type="Texture" id=8]
[ext_resource path="res://resources/Sprites/no-sign.png" type="Texture" id=9]
[ext_resource path="res://resources/Themes/ui_theme1.tres" type="Theme" id=10]
[ext_resource path="res://resources/Themes/ui_theme2.tres" type="Theme" id=11]
[ext_resource path="res://inventory_system/data/resources/settings_data.tres" type="Resource" id=12]
[ext_resource path="res://nodes/pause.tscn" type="PackedScene" id=13]
[ext_resource path="res://resources/soundtrack/menu/title/intro.wav" type="AudioStream" id=14]
[ext_resource path="res://scenes/main_screen/introMusic.gd" type="Script" id=15]

[sub_resource type="GDScript" id=3]
script/source = "extends ParallaxBackground

export (float) var scrolling_speed = 250.0

func _process(delta):
	scroll_offset.x -= scrolling_speed * delta
"

[sub_resource type="DynamicFont" id=1]
size = 150
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "mascot_animation"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("mascot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[node name="main_screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 2643, -278 )
script = ExtResource( 3 )
settings_data = ExtResource( 12 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = SubResource( 3 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 4284, 0 )

[node name="WelcomeScreen" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 2142.01, 555.5 )
scale = Vector2( 4.444, 4.444 )
texture = ExtResource( 8 )

[node name="profile_button" type="Button" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 155.0
margin_bottom = 70.0
rect_min_size = Vector2( 135, 50 )
rect_scale = Vector2( 0.23, 0.23 )
theme = ExtResource( 10 )
custom_fonts/font = SubResource( 1 )
text = "User Profile"
icon = ExtResource( 4 )
flat = true
clip_text = true
icon_align = 1

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -330.0
margin_top = -464.0
margin_right = 682.0
margin_bottom = 1296.0
rect_scale = Vector2( 0.715147, 0.578869 )
custom_constants/vseparation = 15

[node name="offline_button" type="Button" parent="GridContainer"]
margin_right = 1012.0
margin_bottom = 312.0
rect_min_size = Vector2( 450, 100 )
theme = ExtResource( 11 )
custom_fonts/font = ExtResource( 1 )
text = "Offline Mode"
icon = ExtResource( 4 )
flat = true
clip_text = true
icon_align = 1

[node name="online_button" type="Button" parent="GridContainer"]
margin_top = 327.0
margin_right = 1012.0
margin_bottom = 639.0
rect_min_size = Vector2( 450, 100 )
theme = ExtResource( 11 )
custom_fonts/font = ExtResource( 1 )
text = "Online Mode"
icon = ExtResource( 4 )
flat = true
clip_text = true
icon_align = 1

[node name="quick_game" type="Button" parent="GridContainer"]
margin_top = 654.0
margin_right = 1012.0
margin_bottom = 966.0
rect_min_size = Vector2( 450, 100 )
theme = ExtResource( 11 )
custom_fonts/font = ExtResource( 1 )
text = "Quick Game"
icon = ExtResource( 4 )
flat = true
clip_text = true
icon_align = 1

[node name="shop_button" type="Button" parent="GridContainer"]
margin_top = 981.0
margin_right = 1012.0
margin_bottom = 1293.0
rect_min_size = Vector2( 450, 100 )
theme = ExtResource( 11 )
custom_fonts/font = ExtResource( 1 )
text = "Shop"
icon = ExtResource( 4 )
flat = true
clip_text = true
icon_align = 1

[node name="encyclopedia_button" type="Button" parent="GridContainer"]
margin_top = 1308.0
margin_right = 1012.0
margin_bottom = 1620.0
rect_min_size = Vector2( 450, 100 )
theme = ExtResource( 11 )
custom_fonts/font = ExtResource( 1 )
text = "Encyclopedia"
icon = ExtResource( 4 )
flat = true
clip_text = true
icon_align = 1

[node name="settings_button" type="Button" parent="GridContainer"]
visible = false
margin_top = 1448.0
margin_right = 1012.0
margin_bottom = 1760.0
rect_min_size = Vector2( 450, 100 )
theme = ExtResource( 11 )
custom_fonts/font = ExtResource( 1 )
disabled = true
text = "Settings"
icon = ExtResource( 4 )
flat = true
clip_text = true
icon_align = 1

[node name="mascot" type="Sprite" parent="."]
visible = false
position = Vector2( 553, 545 )
scale = Vector2( 2.11146, 2.04297 )
texture = ExtResource( 7 )
hframes = 5

[node name="No-sign" type="Sprite" parent="."]
visible = false
position = Vector2( 549, 601 )
scale = Vector2( 21.6388, 21.6332 )
texture = ExtResource( 9 )

[node name="mascot_animation" type="AnimationPlayer" parent="."]
anims/mascot_animation = SubResource( 2 )

[node name="objects" type="Button" parent="."]
anchor_right = 1.0
margin_left = -35.0
margin_top = 982.0
margin_right = -1220.0
margin_bottom = 1114.0
theme = ExtResource( 10 )
text = "COMPUTER TEST"

[node name="intro" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
autoplay = true
bus = "Music"
script = ExtResource( 15 )

[node name="AudioLoopPlayer" parent="intro" instance=ExtResource( 5 )]
stream = ExtResource( 6 )
autoplay = false
bus = "Music"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="settings" parent="CanvasLayer" instance=ExtResource( 13 )]
mouse_filter = 2

[connection signal="pressed" from="profile_button" to="." method="_on_profile_button_pressed"]
[connection signal="pressed" from="GridContainer/offline_button" to="." method="_on_offline_button_pressed"]
[connection signal="pressed" from="GridContainer/online_button" to="." method="_on_online_button_pressed"]
[connection signal="pressed" from="GridContainer/quick_game" to="." method="_on_quick_game_pressed"]
[connection signal="pressed" from="GridContainer/shop_button" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="GridContainer/encyclopedia_button" to="." method="_on_encyclopedia_button_pressed"]
[connection signal="pressed" from="objects" to="." method="_on_objects_pressed"]
[connection signal="finished" from="intro" to="intro" method="_on_intro_finished"]
